# cooler-than-you

./: .rustfmt.toml  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.zed/: settings.json
control_tray/: Cargo.toml
control_tray/src/: device.rs  main.rs
device/: Cargo.toml  README.md
device/.cargo/: config.toml
device/.zed/: settings.json
device/src/: command.rs  fan_speed.rs  interrupt_cell.rs  lib.rs  main.rs  shared_state.rs
device/src/button/: mod.rs  pins.rs
device/src/monitor/: interrupts.rs  mod.rs  pins.rs
device/src/timed_monitor/: mod.rs  monitor.rs  pins.rs
device/src/usb/: hid_report.rs  interrupts.rs  mod.rs  suspender.rs
driver/: Cargo.toml
driver/src/: main.rs
rusb_async/: Cargo.toml
rusb_async/src/: fd.rs  interrupt.rs  lib.rs  monitor.rs
rusb_async/src/transfer/: bulk.rs  control.rs  interrupt.rs  isochronous.rs  mod.rs
shared/: Cargo.toml  README.md
shared/src/: command.rs  device_command.rs  device_state.rs  fan_speed.rs  lib.rs
src/: fan_speed.rs  interrupt_cell.rs
src/timed_monitor/: interrupts.rs  monitor.rs  pins.rs
src/usb/: hid_report.rs  mod.rs  mod_bkup.rs
tray/: Cargo.toml  README.md
tray/assets/: 69-cooler-than-you.rules  cooler-than-you-autostart.desktop  cooler-than-you.desktop
tray/debian/: postinst
tray/src/: cooler.rs  device.rs  exactly_one.rs  fd_callbacks.rs  fd_handler.rs  indicator.rs  lib.rs  main.rs  rusb_async.rs
tray/src/menu/: mod.rs
tray/src/menu/item/: cmd.rs  command.rs  mod.rs  quit.rs  speed_auto.rs  speed_label.rs
tray/src/menu_item/: item.rs  mod.rs
