[workspace]
members = ["shared", "device", "driver"]
resolver = "3"

[workspace.package]
authors = ["Bogdan Mircea <mirceapetrebogdan@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal
shared = { path = "shared" }

# External
anyhow = { version = "1", default-features = false, features = ["std"] }
arduino-hal = { git = "https://github.com/rahix/avr-hal", rev = "8a47b1f66136ddf60870bcfc9f50395a528dc101", default-features = false, features = [
    "arduino-leonardo",
    "rt",
] }
avr-device = { version = "0.5", default-features = false }
circular-buffer = { version = "1", default-features = false }
itertools = { version = "0.14", default-features = false }
panic-halt = { version = "0.2", default-features = false }
rusb = { version = "0.9", default-features = false }
strum = { version = "0.27", default-features = false, features = ["derive"] }
thiserror = { version = "2", default-features = false }
usbd-hid = { version = "0.8", default-features = false }
usb-device = { version = "0.3", default-features = false }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
