[package]
name = "control_tray"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Internal
shared = { workspace = true }

# External
anyhow = { workspace = true }
itertools = { workspace = true }
libappindicator = { workspace = true }
gtk = { workspace = true }
rusb = { workspace = true }

[lints]
workspace = true
