[package]
name = "device"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "device"
test = false
bench = false

[dependencies]
usbd-hid = { workspace = true }
panic-halt = { workspace = true }
avr-device = { workspace = true }
usb-device = { workspace = true }
circular-buffer = { workspace = true }
arduino-hal = { workspace = true }

[lints]
workspace = true
