[package]
name = "device"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "device"
test = false
bench = false

[dependencies]
# Internal
shared = { workspace = true }

# External
arduino-hal = { workspace = true }
avr-device = { workspace = true }
circular-buffer = { workspace = true }
panic-halt = { workspace = true }
usbd-hid = { workspace = true }
usb-device = { workspace = true }

[lints]
workspace = true
