[package]
name = "device"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
# Internal
shared = { workspace = true }

# External
arduino-hal = { workspace = true }
avr-device = { workspace = true }
circular-buffer = { workspace = true }
panic-halt = { workspace = true }
usbd-hid = { workspace = true }
usb-device = { workspace = true }

[lints]
workspace = true
