[package]
name = "tray"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Internal
shared = { workspace = true }

# External
anyhow = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
gtk = { workspace = true }
libappindicator = { workspace = true }
rusb = { workspace = true }
rusb-async = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
systemstat = { workspace = true }

[lints]
workspace = true
