[package]
name = "tray"
version = "0.1.0"
description = "CoolerThanYou system tray icon that drives the device."
authors.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.deb]
name = "cooler-than-you"
depends = ["libgtk-3-dev", "libayatana-appindicator3-1"]
assets = [
    { source = "target/release/tray", dest = "/usr/bin/cooler-than-you", mode = "0755" },
    { source = "assets/69-cooler-than-you.rules", dest = "/etc/udev/rules.d/69-cooler-than-you.rules", mode = "0644" },
    { source = "assets/cooler-than-you.desktop", dest = "/usr/share/applications/cooler-than-you.desktop", mode = "0644" },
    { source = "assets/cooler-than-you-autostart.desktop", dest = "/etc/xdg/autostart/cooler-than-you-autostart.desktop", mode = "0644" },
    { source = "assets/cooler-than-you-symbolic.svg", dest = "/usr/share/icons/hicolor/64x64/status/cooler-than-you-symbolic.svg", mode = "0644" },
]

[dependencies]
# Internal
shared = { workspace = true }

# External
anyhow = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
gtk = { workspace = true }
libappindicator = { workspace = true }
rusb = { workspace = true }
rusb-async = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
systemstat = { workspace = true }

[lints]
workspace = true
